<resources>
    <string name="app_name">ZotFinder</string>
    <string name="action_settings">Settings</string>
    <string name="back_button">Back</string>
    <string name="map_header">Map</string>
    <string name="blue_phones">Blue Light Phones</string>
    <string name="evacuation_areas">Evacuation Areas</string>
    <string name="restrooms">Restrooms</string>
    <string name="search_header">Search</string>
    <string name="person_info">Person Name</string>
    <string name="office_header">Office</string>
    <string name="phone_header">Office Phone Number</string>
    <string name="fax_header">Fax Number</string>
    <string name="email_header">Email</string>
    <string name="department_info">Department Name</string>
    <string name="dept_address">Address</string>
    <string name="dept_number">Office Phone Number</string>
    <string name="dept_website">Website</string>
    <string name="building_info">Building Name</string>
    <string name="bldg_number">Building Number</string>
    <string name="bldg_address">Address</string>
    <string name="map_link">Map</string>
    <string name="emergency_link">Emergency</string>
    <string name="dialer_link">Dialer</string>
    <string name="emergency_info_header">Emergency Information</string>
    <string name="top_emergencies">Top Emergencies</string>
    <string name="emergency_procedures">Emergency Procedures</string>
    <string name="roles_expectations">Roles / Expectations</string>
    <string name="student_button">Student</string>
    <string name="faculty_button">Faculty/Staff</string>
    <string name="other_emergencies">All Emergencies</string>
    <string name="active_shooter">Active\nShooter</string>
    <string name="earthquake">Earthquake</string>
    <string name="violence">Violence</string>
    <string name="evacuation_disabilities">Evacuation\nDisabilities</string>
    <string name="suspicious_package">Suspicious\nPackage</string>
    <string name="evacuation">Evacuation</string>
    <string name="hazardous_material">Hazardous\nMaterial</string>
    <string name="hazardous_material_shelter">Hazardous\nMaterial\nShelter</string>
    <string name="bomb_threat">Bomb\nThreat</string>
    <string name="medical_emergency">Medical\nEmergency</string>
    <string name="emergency_preparedness">Emergency\nPreparedness</string>
    <string name="fire">Fire</string>
    <string name="persons_in_distress">Person\nIn\nDistress</string>
    <string name="utility_failure">Utility\nFailure</string>
    <string name="active_shooter_title">Active Shooter</string>
    <string name="earthquake_title">Earthquake</string>
    <string name="violence_title">Violence</string>
    <string name="evacuation_disabilities_title">Evacuation Disabilities</string>
    <string name="suspicious_package_title">Suspicious Package</string>
    <string name="evacuation_title">Evacuation</string>
    <string name="hazardous_material_title">Hazardous Material</string>
    <string name="hazardous_material_shelter_title">Hazardous Material Shelter</string>
    <string name="bomb_threat_title">Bomb Threat</string>
    <string name="medical_emergency_title">Medical Emergency</string>
    <string name="emergency_preparedness_title">Emergency Preparedness</string>
    <string name="fire_title">Fire</string>
    <string name="persons_in_distress_title">Person In Distress</string>
    <string name="utility_failure_title">Utility Failure</string>
    <string name="input_text">UCINetID</string>
    <string name="input_hint">Enter a UciNetID</string>
    <string name="active_shooter_text">
<![CDATA[
			<p>&#8226; <b>Call 911</b>, if safe to do so.<br></p>
			<p>&#8226; <b>Run</b> - if you can get out, escape the area.<br></p>
			<p>&#8226; <b>Hide</b>  secure in place, lock/barricade doors, turn off lights, silence phones, and be quiet.<br></p>
			<p>&#8226; <b>Fight</b> - as a last resort, attack aggressively.</p>
		
			]]>
    </string>
    <string name="earthquake_text">
<![CDATA[

			<p>If you are inside:<br></p>
			<p>&#8226; Drop-Cover-Hold under a table or desk or against an inside wall until the shaking stops.<br></p>
			<p>&#8226; Avoid windows, filing cabinets, bookcases and other heavy objects.<br></p>
			<p>&#8226; After the shaking stops, check for injuries and assess your surroundings for damage.<br></p>
			<p>&#8226; Evacuate the building if you feel unsafe or if told to do so by building staff or emergency 
			responders.<br></p>
			<p>&#8226; Do not leave the area/campus without reporting your status to someone in charge.<br><br></p>
			<p>If you are outside:<br></p>
			<p>&#8226; Move away from trees, signs, buildings, electrical poles and wires. <br></p>
			<p>&#8226; Protect your head with your arms.<br></p>
			<p>&#8226; Proceed to the nearest assembly area.<br></p>
		
			]]>
    </string>
    <string name="persons_in_distress_text">
<![CDATA[

			<p>Persons Who Are Disruptive<br></p>
			<p>If a person displays conduct that is reckless, disorderly, threatening, 
			including self-harmful behavior, and you are concerned for your safety or the 
			safety of others, please call 911 or the UCI Police Department.<br></p>
			<p>If the conduct is not life threatening:<br></p>
			<p>&#8226; For a UCI student, contact the Office of Student Conduct.<br></p>
			<p>&#8226; For a UCI employee, contact Human Resources.<br></p>
			<p>Persons Who Are Distressed<br></p>
			<p>Distressed persons display persistent behaviors, such as: anxious, sad, irritable, 
			withdrawn, confused, lacks motivation and/or concentration, seeks constant attention, 
			demonstrates bizarre or erratic behavior, or expresses suicidal thoughts.<br></p> 
			<p>&#8226; For a UCI student, contact the Counseling Center, Student Health Center, Campus 
			Assault Resources and Education (CARE), or the UCI Police Department for help.<br></p>
			<p>&#8226; For a UCI employee, contact Human Resources, Cascade Employee Assistance Program,
			 or the UCI Police Department for help.<br></p>
			<p>For consultation regarding disruptive or distressed individuals, please contact the UCI 
			Consultation Team through the Office of the Clinical Social Worker. <br></p>
			
		
			]]>
    </string>
    <string name="fire_text">
<![CDATA[
			
		    <p>If you discover a fire:<br></p>
			<p>&#8226; Extinguish the fire if you have been trained and if it is safe to do so.<br></p>
			<p>&#8226; Evacuate the immediate area and close doors behind you.<br></p> 
			<p>&#8226; Pull the nearest fire alarm.<br></p>
			<p>&#8226; Call 911 if safe to do so. Otherwise, evacuate the building then call 911.<br></p>
			<p>&#8226; Do not re-enter the building until an â€œAll Clearâ€ is given by emergency responders.<br></p>
			<p>If you hear a fire alarm:<br></p>
			<p>&#8226; Evacuate as soon as the alarm sounds.<br></p>
			<p>&#8226; Test closed doors with the back of your hand. DO NOT open doors if they are hot.<br></p>
			<p>&#8226; Use stairs only. Do not use elevators.<br></p>
			<p>&#8226; Proceed to the designated assembly area.<br></p>
			<p>&#8226; Do not re-enter the building until an â€œAll Clearâ€ is given by emergency responders.<br></p>
		
			]]>
    </string>
    <string name="emergency_preparedness_text">
<![CDATA[
			
			<p>Are you prepared for an emergency situation? Take these simply steps to improve the preparedness 
			of you, your family, and your work colleagues.<br></p>
			<p>Have A Kit<br></p>
			<p>Keep an emergency kit at home, in your car, and in your office.<br></p>
			<p>&#8226; Water â€“ one gallon per person per day for at least 3 days for drinking and sanitation.<br></p>
			<p>&#8226; Food â€“ at least a 3 day supply of non-perishable food.<br></p>
			<p>&#8226; Battery operated Radio and Flashlight with extra batteries.<br></p>
			<p>&#8226; First Aid Kit.<br></p>
			<p>&#8226; Whistle.<br></p>
			<p>&#8226; All Purpose Tool.<br></p>
			<p>&#8226; Basic sanitation items like towelettes, garbage bags, hand sanitizer, tissues.<br></p>
			<p>&#8226; Change of clothes and sturdy shoes.<br></p>
			<p>Make A Plan<br></p>
			<p>&#8226; Have an out-of-town contact for family members to report in to.<br></p>
			<p>&#8226; ICE your cell phone â€“ identify who to call In Case of Emergency.<br></p>
			<p>&#8226; Be prepared to limit phone use to essential calls only. Text messages may go 
			through when phone calls will not.<br></p>
			<p>&#8226; Select a family meeting location in case your house is not safe or accessible.<br></p>
			<p>Be Informed<br></p>
			<p>&#8226; The Top 5 Hazards For UC Irvine are:<br></p>
			<p>o Catastrophic Earthquake.<br></p>
			<p>o Laboratory or Housing Fire.<br></p>
			<p>o Civil Disturbance.<br></p>
			<p>o Public Health Emergency.<br></p>
			<p>o Active Shooter/Workplace Violence.<br></p>
			<p>&#8226; Know what to do in case of an emergency on campus.<br></p>
			<p>&#8226; Know evacuation routes and the pre-designated assembly areas for the buildings 
			you are in most frequently.<br></p>
			<p>&#8226; Inquire about the emergency plan for family membersâ€™ work and school.<br></p>
			<p>&#8226; Visit www.ready.gov for more information.<br></p>
			<p>&#8226; For campus emergency preparedness information visit www.police.uci.edu.<br></p>
			<p>&#8226; Sign up to receive zotALERT text messages at www.oit.uci.edu/zotalert.<br></p>
			
					
			]]>
    </string>
    <string name="bomb_threat_text">
<![CDATA[
			<p>Bomb threats usually come on the telephone and generally 
			are made by individuals who want to create an atmosphere of 
			general anxiety or panic. All bomb threats should be assumed to 
			pose a legitimate danger to the UCI campus.<br><br></p>
			<p>By Telephone:<br></p>
			<p>1. Take the caller seriously, but remain calm.<br></p>
			<p>2. Ask a lot of questions, such as: When will the bomb explode?
			Where is it located? What does it look like? What kind of bomb is 
			it?<br></p>
			<p>3. Take notes on everything said and on your observations 
			about background noise, voice characteristics, etc.<br></p>
			<p>4. If possible, have a co-worker call the UCI Police Department 
			while you continue talking to the caller.<br></p>
			<p>5. Call 911 immediately after the threatening call.<br></p>
			<p>6. Notify your supervisor/department head. <br></p>
			<p>7. Campus police will determine if evacuation is necessary.
			If you do evacuate, move to an evacuation assembly area.<br></p>
			<p>8. Do not re-enter the area until instructed to do so.<br></p>
		
			]]>
    </string>
    <string name="evacuation_text">
<![CDATA[
			<p>&#8226; Stay calm. Do not panic. Move swiftly.<br></p>
			<p>&#8226; Safely stop your work and secure any hazardous materials or equipment before leaving.<br></p>
			<p>&#8226; Gather your personal belongings if safe to do so.<br></p>
			<p>&#8226; Proceed to the nearest safe exit.<br></p>
			<p>&#8226; Do not use elevators.<br></p>
			<p>&#8226; Proceed to the designated assembly area.<br></p>
			<p>&#8226; Wait for instructions from emergency responders.<br></p>
			<p>&#8226; Do not re-enter the building until an â€œAll Clearâ€ is given by emergency responders.<br></p>
			
			]]>
    </string>
    <string name="hazardous_material_text">
<![CDATA[
			<p>&#8226; Evacuate affected area.<br></p>
			<p>&#8226; Call 911.<br></p>
			<p>&#8226; Provide the dispatcher with information on the material type, quantity, and specific location of
			the spill or release.<br></p>	
			<p>&#8226; Isolate the spill/release and deny entry to the area.<br></p>
			<p>&#8226; Notify EH&S at 824-6200 if you have been exposed to a hazard or you have information about 
			the release.<br></p>
			<p>&#8226; Follow instructions of emergency responders.<br></p>
		
			]]>
    </string>
</resources>