<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/holo_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    
    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:background="@color/header_color_blue" >
	        
			<!-- use this id to add the Department NAME -->
	       <TextView
	            android:id="@+id/departmentName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/department_info"
	            android:textSize="@dimen/font_size"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@color/white"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"
	            android:layout_marginBottom="3dp"/>
      </TableRow>
	       
    
    <!-- This is the button for formatting and Toggling -->
    <Button 
       android:id="@+id/transparent_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:background="@drawable/map_icon_pressed"
       android:alpha="0"
       android:textColor="@color/white"
       android:textSize="@dimen/button_text_size"
       android:onClick="goToMap" />
	        
    <include
	        layout="@layout/commonfooter" />
    
    
    <ScrollView 
		    android:id="@+id/ScrollLayout"
		    android:layout_below="@+id/tableRow1"
		    android:layout_width="wrap_content"
	  		android:layout_height="match_parent"
	  		android:layout_marginTop="15dp"
	  		android:layout_above="@+id/transparent_button">
			
			<RelativeLayout 
			    android:id="@+id/R3Layout"
			    android:layout_width="wrap_content"
	  			android:layout_height="wrap_content">
	  			
			    <!-- Department Address HEADER -->
			    <TextView
					android:id="@+id/deptAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/dept_address"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"/>
	            <!-- Department Address FOR JAVA-->
				<TextView
					android:id="@+id/departmentAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/deptAddress"
					android:layout_marginBottom="20dp"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"
					android:clickable = "true"
					android:onClick="plotPoint"/>
				
				<!-- Department Number HEADER -->
				
				<TextView
					android:id="@+id/deptPhoneNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/departmentAddress"
					android:text="@string/dept_number"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"/>
				<!-- Department Number FOR JAVA-->
				<TextView
					android:id="@+id/departmentPhoneNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/deptPhoneNumber"
					android:layout_marginBottom="20dp"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"
					android:clickable="true"
					android:onClick="call"/>
				
				<!-- Department Website Header -->
				<TextView
					android:id="@+id/deptWebsite"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/departmentPhoneNumber"
					android:text="@string/dept_website"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"/>
				
				<TextView
					android:id="@+id/departmentWebsite"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/deptWebsite"
					android:layout_marginBottom="20dp"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"/>
				
			</RelativeLayout>
	    
	</ScrollView>
	
    
</RelativeLayout>