<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/holo_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <include
	        layout="@layout/commonfooter" />
    
    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:background="@color/header_color_blue" >
	        
        	<ImageButton 
	            android:id="@+id/backButton"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
				android:layout_marginLeft="2dp"
				android:layout_marginTop="3dp"
				android:layout_marginBottom="3dp"
				android:padding="1dp"
				android:gravity="center_horizontal"
		        android:text="@string/back_button"
		        android:textSize="12sp"
		        android:textStyle="bold"
		        android:background="@android:color/transparent"
		        android:src="@drawable/ic_action_previous_item"
		        android:onClick="finishActivity"
	                />
			<!-- use this id to add the Building NAME -->
	       <TextView
	            android:id="@+id/buildingName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/building_info"
	            android:textSize="@dimen/font_size"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@color/white"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"
	            android:layout_marginBottom="3dp"/>
      </TableRow>
	       
    
    <!-- This is the button for formatting and Toggling -->
    <Button 
       android:id="@+id/transparent_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:background="@drawable/map_icon_pressed"
       android:alpha="0"
       android:textColor="@color/white"
       android:textSize="@dimen/button_text_size"
       android:onClick="goToMap" />
	
    <ScrollView 
		    android:id="@+id/ScrollLayout"
		    android:layout_below="@+id/tableRow1"
		    android:layout_width="wrap_content"
	  		android:layout_height="match_parent"
	  		android:layout_marginTop="15dp"
	  		android:layout_above="@+id/transparent_button">
			
			<RelativeLayout 
			    android:id="@+id/R3Layout"
			    android:layout_width="wrap_content"
	  			android:layout_height="wrap_content">
	  			
			    <!-- Building Number HEADER -->
			    <TextView
					android:id="@+id/bldgAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/bldg_address"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"
					android:background="@color/header_color_blue"
					/>
			    <ImageButton 
		            android:id="@+id/locateButton"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_alignRight="@+id/bldgAddress"
					android:layout_marginLeft="2dp"
					android:layout_marginTop="2dp"
					android:layout_marginBottom="3dp"
					android:padding="1dp"
			        android:textSize="12sp"
			        android:textStyle="bold"
			        android:background="@android:color/transparent"
			        android:src="@drawable/ic_action_locate"
			        android:onClick="plotPoint"
	                />
	            <!-- Building Address FOR JAVA-->
				<TextView
					android:id="@+id/buildingAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/bldgAddress"
					android:layout_marginBottom="20dp"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"
					android:clickable = "true"
					android:onClick="plotPoint"/>
				
				<!-- Building Number HEADER -->
				
				<TextView
					android:id="@+id/bldgNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/buildingAddress"
					android:text="@string/bldg_number"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"
					android:background="@color/header_color_blue"/>
				<!-- Building Number FOR JAVA-->
				<TextView
					android:id="@+id/buildingNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/bldgNumber"
					android:layout_marginBottom="20dp"
					android:textSize="@dimen/font_size"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/white"
					android:clickable="true"
					/>
				
				
				
			</RelativeLayout>
	    
	</ScrollView>
	
    
</RelativeLayout>